crates/tessera-emit/tests/snapshots/site_quill__site-self-managed-3-3-install-agent-md.snap
---
source: crates/tessera-emit/tests/site_quill.rs
expression: text
---
---
title: Install the Quill agent
description: Install and configure the Quill agent to sync your docs to Quill Cloud or a self-managed Quill server.
available:
- target: cloud
  dimension: deployment
  states:
  - ga
  text: Quill Cloud (GA)
- target: self-managed
  dimension: deployment
  states:
  - preview
  versions:
  - '3.3'
  text: self-managed (preview, 3.3+)
---

The Quill agent watches your docs repository and syncs changes to Quill. This page covers installing the agent with a package manager, configuring it, and connecting it to Quill Cloud or a self-managed server. If you only want to try Quill, see [Try Quill in the browser](/quickstart/#try-in-browser).

<tessera-note type="tip" label="Tip" heading="Try it without installing">

You can run Quill in the browser at play.quill.dev with no local setup.

</tessera-note>

## Prerequisites <tessera-attributes id="prerequisites"></tessera-attributes>

Before you install the agent, make sure you have:

- Node.js 20 or later.
- A docs repository that Quill can read.

![Checklist of prerequisites](./_fragments/prerequisites.png)

## Install the agent <tessera-attributes id="install-agent"></tessera-attributes>

<tessera-steps>

1. Install the agent package:

   <tessera-tabs sync="pm">

   <tessera-tab value="npm" label="npm">

   ```shell
   npm install -g @quill/agent
   ```

   </tessera-tab>

   <tessera-tab value="pnpm" label="pnpm">

   ```shell
   pnpm add -g @quill/agent
   ```

   </tessera-tab>

   <tessera-tab value="yarn" label="Yarn">

   ```shell
   yarn global add @quill/agent
   ```

   </tessera-tab>

   </tessera-tabs>

2. Verify the install:

   ```shell
   quill --version
   ```

   The command prints the installed version, 3.4.1.

   <tessera-note type="note" label="Note">

   The agent needs write access to your repository's `.quill/` directory.

   </tessera-note>

3. Create `quill.yaml` at the root of your repository:

   ```yaml
   agent:
     version: 3.4.1
     watch: docs/
   ```

</tessera-steps>

## Connect to Quill <tessera-attributes id="connect"></tessera-attributes>

<tessera-tabs sync="deployment">

<tessera-tab value="cloud" label="Quill Cloud">

Sign in to Quill Cloud and copy an API key from **Settings → Keys**, then add it to `quill.yaml`:

```yaml
cloud:
  api_key: ${QUILL_KEY}
```

</tessera-tab>

<tessera-tab value="self-managed" label="self-managed">

Point the agent at your server. Self-managed servers must run Quill Server 3.3 or later.

```yaml
server:
  url: https://quill.internal.example.com
```

</tessera-tab>

</tessera-tabs>

## Troubleshooting <tessera-attributes id="troubleshooting"></tessera-attributes>

<tessera-note type="warning" label="Warning">

If the agent exits immediately, check the log at `~/.quill/agent.log`.

A common cause is an expired API key. Generate a new key, then restart the agent. See [Rotate keys](/keys/#rotate-keys).

</tessera-note>
